fix gap in list

--- a/src/components/InventoryList/InventoryList.scss
+++ b/src/components/InventoryList/InventoryList.scss
@@ -52,6 +52,10 @@
   .inventorypage__actions {
     padding-left: 2rem;
   }
+
+  .card__list-content-right {
+    gap: 1rem;
+  }
 }
 
 .card {
